# G_tests_project

./: CMakeLists.txt  main.cpp  simplemath.cpp  simplemath.h
